# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/models/: cube_test.glb  hierarchy.gltf  hierarchy2.glb  hierarchy2.gltf  lights_test.glb  monke.gltf  triangle.gltf
assets/shaders/: accumulate_sh_coeffs.cs.hlsl  brdf.cs.hlsl  cubemap_to_diffuse.cs.hlsl  downsample.cs.hlsl  final_blit.ps.hlsl  fullscreen_quad.vs.hlsl  fullscreen_tri.vs.hlsl  geo_pass.ps.hlsl  geo_pass.vs.hlsl  hdri_to_cubemap.cs.hlsl  ibl_brdf_lut_gen.cs.hlsl  prefilter_cubemap.cs.hlsl  ssao.cs.hlsl  test.ps.hlsl  test.vs.hlsl  tonemapping.cs.hlsl
assets/shaders/pathtraced/: pathtrace.chit.hlsl  pathtrace.cs.hlsl  pathtrace.rgen.hlsl
assets/shaders/post/: ssao.cs.hlsl  tonemapping.cs.hlsl
assets/shaders/pre/: compute_sh_matrices.cs.hlsl  cubemap_to_diffuse.cs.hlsl  downsample.cs.hlsl  hdri_to_cubemap.cs.hlsl  ibl_brdf_lut_gen.cs.hlsl  prefilter_cubemap.cs.hlsl  reconstruct_normal_map.cs.hlsl
assets/shaders/rasterized/: brdf.cs.hlsl  geo_pass.ps.hlsl  geo_pass.vs.hlsl
source/: buffer.cpp  buffer.h  command.cpp  command.h  command_buffer.cpp  command_buffer.h  command_queue.cpp  command_queue.h  common.h  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  fence.cpp  fence.h  hl_renderer.cpp  hl_renderer.h  input.cpp  input.h  log.cpp  log.h  main.cpp  model.cpp  model.h  pass_info.cpp  pass_info.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  resource.cpp  resource.h  scene.cpp  scene.h  shader.cpp  shader.h  structs.h  swapchain.cpp  (+3 more)
source/dx12/: command_buffer.cpp  command_buffer.h  command_queue.cpp  command_queue.h  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  fence.cpp  fence.h  helpers.h  pipeline.cpp  pipeline.h  swapchain.cpp  swapchain.h
source/vulkan/: command_queue.cpp  command_queue.h  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  helpers.h
